# filemanager

./: .clang-format  CMakeLists.txt  main.cpp  run.sh  test  test.cpp
constants/: constants.hpp
include/: types.hpp
include/data_fetching/: data_fetching.hpp
include/ui_component/: ui_component.hpp
include/utils/: utils.hpp
src/data_fetching/: data_fetching.cpp
src/utils/: utils.cpp
